[package]
name = "tauri_elm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/sethlowie/tauri-elm/tree/main/src-tauri"
default-run = "app"
edition = "2021"
rust-version = "1.59"

[lib]
name = "tauri_elm"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = [] }
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
directories = "4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
